--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
+          cp /home/projects/github_runner/actions-runner-frontend/_work/AIGC_frontend /home/projects/aigc_frontend,
           echo test, and deploy your project.
