--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          chmod 777 -R /home/projects/aigc_frontend/codes
+          chmod 777 -R /home/projects/github_runner/actions-runner-frontend/_work/AIGC_frontend
           cp -R /home/projects/github_runner/actions-runner-frontend/_work/AIGC_frontend /home/projects/aigc_frontend/codes
           echo test, and deploy your project.
