--- a/antdx-aigc/package.json
+++ b/antdx-aigc/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^5.24.0",
     "antd-style": "^3.7.1",
     "axios": "^1.7.9",
+    "markdown-it": "^14.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
